Aplico cambios en el proyecto de mi sitio personal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <header>
         
-        <a href="#" class="logo">GUSTAVO GAMBALE</a>
+        <a href="#" class="logo">GG.</a>
 
         <input type="checkbox" name="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-icon-action"><div class='bx bx-menu' id="menu-icon"></div></label>
@@ -45,24 +45,23 @@
             <p>Soy un apasionado desarrollador web <br>
                 especializado en HTML5, CSS3 y JavaScript,<br>
                 listo para convertir tus ideas en realidad.</p>
-            <a href="#">CV</a>
-            <a href="#" class="mi-portfolio"><i class="ri-html5-fill"></i>Portfolio</a>
+            <a href="#"><i class='bx bxs-file-pdf' ></i>CV</a>
+            <a href="https://github.com/ggambale" target="_blank" class="mi-portfolio"><i class='bx bxl-github'></i>Portfolio</a>
         </div>
         <div class="hero-image">
             <div class="hero-image-box">
-                <img src="/assets/img/unnamed.jpg" alt="gustavo gambale foto">
+                <img src="assets/img/my-photo.png" alt="gustavo gambale foto">
             </div>
         </div>
     </section>
 
     <div class="icons">
-        <a href="#"><i class="ri-instagram-fill"></i></a>
-        <a href="#"><i class="ri-linkedin-fill"></i></a>
-        <a href="#"><i class="ri-github-fill"></i></a>
+        <a href="#"><i class='bx bxl-netlify'></i></a>
+        <a href="https://www.linkedin.com/in/ggambale/" target="_blank"><i class="ri-linkedin-fill"></i></a>
     </div>
 
     <div class="scroll-down">
-        <a href="#"><i class="ri-scroll-to-bottom-fill"></i></a>
+        <a href="#"><i class='bx bxs-down-arrow'></i></a>
     </div>
 
 </body>
